fix some spacing issues

--- a/app/assets/stylesheets/responsive-layout.css.scss
+++ b/app/assets/stylesheets/responsive-layout.css.scss
@@ -206,7 +206,7 @@ body {
             height: auto;
             margin: 0;
         }
-            a {
+            ul a {
                 display: block;
                 padding: 0 4.16667%;
 
@@ -346,7 +346,7 @@ tr:last-child {
                     li:first-child:before {
                         display: none;
                     }
-                        a {
+                        ul a {
                             display: inline;
                             padding: 0;
 
